[package]
name = "assembler"
version = "2.0.0"
authors = ["Jonathon Pendleury <jonathon.pendlebury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0"